--- a/src/config.json
+++ b/src/config.json
@@ -6,5 +6,8 @@
 	"dbname": "dbcon",
 	"hashingsalt": "123456",
 	"encryptionkey": "123456",
-	"serverport": 8888
+	"serverport": 8888,
+	"key": "coding rocks",
+	"tokenid": "",
+	"tokenissuer": "Team Depardieu"
 }
